syntax = "proto3";

message ListTestsRequest {
    // intentionally left blank
}

message ListTestsResponse {
    message TestInfo {
        uint32 id = 1;
        string name = 2;
    }
    repeated TestInfo tests = 1;
}

message RunTestRequest {
    uint32 test_id = 1;
}

message RunTestResponse {
    bool passed = 1;
    string msg = 2;
}

message Request {
    oneof requests {
        ListTestsRequest list_tests = 1;
        RunTestRequest run_test = 2;
    }
}
